--- a/OOOTablewar/PresentationLogic/Windows/AdminProduct.xaml
+++ b/OOOTablewar/PresentationLogic/Windows/AdminProduct.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="PresentationLogic.Windows.Products"
+﻿<Window x:Class="PresentationLogic.Windows.AdminProduct"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -21,6 +21,14 @@
             <Setter Property="Fill" Value="#333333"/>
             <Setter Property="Width" Value="16"/>
             <Setter Property="Height" Value="16"/>
+        </Style>
+
+        <!-- Стиль для кнопок управления продуктом -->
+        <Style x:Key="ProductActionButtonStyle" TargetType="Button">
+            <Setter Property="Margin" Value="5,2,5,2"/>
+            <Setter Property="Padding" Value="6,3"/>
+            <Setter Property="FontSize" Value="12"/>
+            <Setter Property="MinWidth" Value="80"/>
         </Style>
     </Window.Resources>
 
@@ -155,7 +163,7 @@
                                 </StackPanel>
 
                                 <!-- Правая часть: цена и наличие -->
-                                <StackPanel>
+                                <StackPanel Margin="0,0,10,0">
                                     <TextBlock Text="{Binding Price, StringFormat='Цена: {0:C}'}" 
                                                FontWeight="Bold" 
                                                FontSize="16"
@@ -167,12 +175,37 @@
                                                Margin="0,5,0,0"/>
                                 </StackPanel>
 
+                                <!-- Кнопки управления -->
                                 <StackPanel>
+                                    <!-- Кнопка добавления в корзину -->
                                     <Button x:Name="AddBasket" 
                                             Content="Добавить в корзину" 
                                             Background="#498c51"
                                             Foreground="White"
-                                            Style="{StaticResource SortButtonStyle}"/>
+                                            Style="{StaticResource SortButtonStyle}"
+                                            Click="AddBasket_Click"/>
+
+                                    <!-- Кнопки управления продуктом -->
+                                    <Button x:Name="DeleteButton"
+                                            Content="Удалить"
+                                            Style="{StaticResource ProductActionButtonStyle}"
+                                            Background="#d9534f"
+                                            Foreground="White"
+                                            Click="DeleteButton_Click"/>
+
+                                    <Button x:Name="EditButton"
+                                            Content="Изменить"
+                                            Style="{StaticResource ProductActionButtonStyle}"
+                                            Background="#5bc0de"
+                                            Foreground="White"
+                                            Click="EditButton_Click"/>
+
+                                    <Button x:Name="AddProductButton"
+                                            Content="Добавить"
+                                            Style="{StaticResource ProductActionButtonStyle}"
+                                            Background="#5cb85c"
+                                            Foreground="White"
+                                            Click="AddProductButton_Click"/>
                                 </StackPanel>
                             </StackPanel>
                         </Border>
