--- a/OOOTablewar/PresentationLogic/Windows/Basket.xaml
+++ b/OOOTablewar/PresentationLogic/Windows/Basket.xaml
@@ -30,7 +30,7 @@
             <Setter Property="Width" Value="16"/>
             <Setter Property="Height" Value="16"/>
         </Style>
-        <local:PriceConverter x:Key="PriceConverter"/>
+        <!--local:PriceConverter x:Key="PriceConverter"/-->
     </Window.Resources>
 
     <Grid>
